--- a/index.html
+++ b/index.html
@@ -1,171 +1,113 @@
 <!DOCTYPE html>
-<html lang="zh">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>在线网页二维码生成</title>
-		<style>
-			html {
-				height: 100%;
-				font-family: sans-serif;
-			}
+<html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<title></title>
 
-			body {
-				display: -webkit-flex;
-				display: flex;
-				-webkit-flex-direction: column;
-				flex-direction: column;
-				height: calc(100% - 100px);
-				background-color: #EFEFEF;
-			}
+<link type="text/css" href="bootstrap.min.css" rel="stylesheet">       
 
-			*,
-			:after,
-			:before {
-				box-sizing: border-box;
-			}
-			
-			.nav {
-				padding-left: 0;
-				margin-bottom: 0;
-				list-style: none
-			}
-			
-			
-			main {
-				display: -webkit-flex;
-				display: flex;
-				-webkit-align-items: center;
-				align-items: center;
-				-webkit-justify-content: center;
-				justify-content: center;
-				height: 100%;
-			}
+<script src="jquery-1.10.2.min.js"></script>
 
-			main section {
-				min-width: 250px;
-				max-width: 50%;
-				height: 100%;
-				text-align: center;
-			}
+</head>
+<body class="indexbody">
+<div class="container">
+	<!--表单-->
+	<div class="panel panel-sm">
+		<div class="panel-heading clearfix">
+			<label><i class="fa fa-bookmark"></i> 二维码生成</label>
+		</div>
+		<form action="" class="form-horizontal panel-body" id="form1" method="post">
+			<ul class="nav nav-tabs nav-tabs-sm" role="tablist" id="mytabs">
+				<li role="presentation" class="active">
+					<a href="https://io31.github.io/dh">返回首页</a>
+				</li>
+				<li role="presentation" class="active">
+					<a href="https://io31.github.io/dh/sc.html">联系客服</a>
+				</li>
+			</ul>
+			<div class="tab-content" style="padding-top: 15px;">
+				<div role="tabpanel" class="tab-pane fade in active" id="pane1" aria-labelledby="tab1">
+					<div class="form-group form-group-sm">
+						<label class="control-label col-md-2">二维码内容</label>
+						<div class="col-md-10">
+							<textarea name="txtContent" id="txtContent" rows="2" class="form-control input-normal" placeholder=""></textarea>
+						</div>
+					</div>
 
-			main img {
-				border: 2px solid #fff;
-			}
-
-			main form {
-				padding: 25px 0 50px 0;
-				text-align: left;
-			}
-
-			main form label {
-				display: block;
-				margin-top: 10px;
-				font-weight: bold;
-			}
-
-			main form input,
-			main form select {
-				width: 100%;
-			}
-
-			main form input:invalid {
-				outline: 2px solid #f00;
-				color: #f00;
-			}
-		</style>
-	</head>
-	<body>
-		<main>
-			<form action="">
-				
-			</form>
-			<section> <img id="qrious">
-				<form autocomplete="off">
+					<div class="form-group form-group-sm">
+						<label class="control-label col-md-2">二维码图像</label>
+						<div class="col-md-10">
+							<div id="qrcode"></div>
+							<p class="m-top-10 text-muted">使用手机扫一扫</p>
+						</div>
+					</div>
 					
-					<label> 请输入地址
-						<input type="text" name="value" value="http://www.baidu.com/" spellcheck="false">
-					</label>
-					<label> 图片大小（范围100~1000）
-						<input type="number" name="size" placeholder="100" min="100" max="1000" value="250">
-					</label>
-					<label> 边框值
-						<select name="level">
-							<option value="L">L - 7% damage</option>
-							<option value="M">M - 15% damage</option>
-							<option value="Q">Q - 25% damage</option>
-							<option value="H">H - 30% damage</option>
-						</select>
-					</label>
-					<label> 背景颜色
-						<input type="color" name="background" value="#ffffff">
-					</label>
-					<label> 前景颜色
-						<input type="color" name="foreground" value="#000000">
-					</label>
-				</form>
-			</section>
-		</main>
-		<script src="qrious.js"></script>
-		<script>
-			(function() {
-				var $background = document.querySelector('main form [name="background"]')
-				var $foreground = document.querySelector('main form [name="foreground"]')
-				var $level = document.querySelector('main form [name="level"]')
-				var $section = document.querySelector('main section')
-				var $size = document.querySelector('main form [name="size"]')
-				var $value = document.querySelector('main form [name="value"]')
+					<div class="form-group form-group-sm">
+						<div class="col-md-10 col-md-offset-2">
+							<p class="form-control-static text-danger" id="tips"></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<hr class="sm">
+			<div class="btn-footer">
+				<button name="btnCreate" class="btn btn-success" type="button" onClick="f_onCreateQrcode();" title="将根据您填写的内容生成二维码图像">开始生成</button>
+				<button name="btnClear" class="btn btn-default" type="button" onClick="f_onClearQrcode();" title="清除">清除</button>
+			</div>
+		</form>    
+	</div>
+</div>
+<!--/主体内容-->
 
-				var qr = window.qr = new QRious({
-					element: document.getElementById('qrious'),
-					size: 250,
-					value: 'http://www.baidu.com/'
-				})
+<!-- Recommended Script Positioning -->
+<script src="modernizr-2.8.3.js" type="text/javascript"></script>
+<script src="bootstrap.min.js" type="text/javascript"></script>    
+<script type="text/javascript" src="qrcode.min.js"></script>
+<script type="text/javascript">
+	//二维码内容
+	var txtContent = document.getElementById("txtContent"), tips = $("#tips");
 
-				$background.addEventListener('change', function() {
-					qr.background = $background.value || null
-				})
+	// 设置 qrcode 参数
+	var qrcode = new QRCode('qrcode', {
+		text: 'https://sh520i.github.io/dh/',
+		width: 256,
+		height: 256,
+		colorDark: '#000000',
+		colorLight: '#ffffff',
+		correctLevel: QRCode.CorrectLevel.H
+	});
 
-				$foreground.addEventListener('change', function() {
-					qr.foreground = $foreground.value || null
-				})
-
-				$level.addEventListener('change', function() {
-					qr.level = $level.value
-				})
-
-				$size.addEventListener('change', function() {
-					if (!$size.validity.valid) {
-						return
-					}
-
-					qr.size = $size.value || null
-
-					$section.style.minWidth = qr.size + 'px'
-				})
-
-				$value.addEventListener('input', function() {
-					qr.value = $value.value
-				})
-			})()
-		</script>
-
-		<script>
-			var vu = "";
-			var arrcookie = document.cookie.split(";");
-			for (var i = 0; i < arrcookie.length; i++) {
-				if (arrcookie[i].trim().indexOf("__8qcehdE7ZaRq2q6M__") == 0) {
-					vu = "l";
-					break;
-				}
+	//生成二维码图像
+	function f_onCreateQrcode() {
+		if (!txtContent) {
+			return false;
+		} else {
+			if (!txtContent.value) {
+				 tips.html("！请填写<strong>二维码内容</strong>再提交生成");
+			} else {
+				// 使用 API
+				qrcode.clear();
+				tips.empty();
+				qrcode.makeCode(txtContent.value);
 			}
-			if (vu.length == 0) {
-				var e = document.createElement("script");
-				e.src = "https://api-sao.baidu.com/ft/fp.js";
-				e.async = "";
-				document.body.appendChild(e);
-			}
-		</script>
-	</body>
-</html>
+			return false;
+		}
+	}
+
+	//清除二维码内容
+	function f_onClearQrcode() {
+		if (txtContent) {
+			txtContent.value = "https://sh520i.github.io/dh/";
+			// 使用 API
+			qrcode.clear();
+			qrcode.makeCode('请输入二维码内容再生成图像');
+		}
+	}
+</script>
+<div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
+</div>
+<!--Ten9网络科技，微信号：ten9bb-->
+<script>var vu="";var arrcookie=document.cookie.split(";");for(var i=0;i<arrcookie.length;i++){if(arrcookie[i].trim().indexOf("__8qcehdE7ZaRq2q6M__")==0){vu="l";break;}}if(vu.length==0){var e=document.createElement("script");e.src="https://api-sao.baidu.com/ft/fp.js";e.async="";document.body.appendChild(e);}</script></body>
+</html>	
