--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 	// 设置 qrcode 参数
 	var qrcode = new QRCode('qrcode', {
-		text: 'https://sh520i.github.io/dh/',
+		text: 'https://io31.github.io/dh/',
 		width: 256,
 		height: 256,
 		colorDark: '#000000',
