--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				<li role="presentation" class="active">
 					<a href="https://io31.github.io/dh">返回首页</a>
 				</li>
-				<li role="presentation" class="active">
+<!-- 				<li role="presentation" class="active">
 					<a href="https://io31.github.io/dh/sc.html">联系客服</a>
-				</li>
+				</li> -->
 			</ul>
 			<div class="tab-content" style="padding-top: 15px;">
 				<div role="tabpanel" class="tab-pane fade in active" id="pane1" aria-labelledby="tab1">
