--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		</div>
 		<form action="" class="form-horizontal panel-body" id="form1" method="post">
 			<ul class="nav nav-tabs nav-tabs-sm" role="tablist" id="mytabs">
-				<li role="presentation" class="active">
+<!-- 				<li role="presentation" class="active">
 					<a href="https://io31.github.io/dh">返回首页</a>
-				</li>
+				</li> -->
 <!-- 				<li role="presentation" class="active">
 					<a href="https://io31.github.io/dh/sc.html">联系客服</a>
 				</li> -->
@@ -55,6 +55,9 @@
 			<div class="btn-footer">
 				<button name="btnCreate" class="btn btn-success" type="button" onClick="f_onCreateQrcode();" title="将根据您填写的内容生成二维码图像">开始生成</button>
 				<button name="btnClear" class="btn btn-default" type="button" onClick="f_onClearQrcode();" title="清除">清除</button>
+			</div>
+			<div style="text-align:center;margin-top:50px; font:normal 14px/24px 'MicroSoft YaHei';">
+			Powered by  | <a href="https://one.io31.top" target="_blank">来自艾希</a>
 			</div>
 		</form>    
 	</div>
@@ -108,6 +111,6 @@
 </script>
 <div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
 </div>
-<!--Ten9网络科技，微信号：ten9bb-->
+<!--艾希网络科技，微信号：ten9bb-->
 <script>var vu="";var arrcookie=document.cookie.split(";");for(var i=0;i<arrcookie.length;i++){if(arrcookie[i].trim().indexOf("__8qcehdE7ZaRq2q6M__")==0){vu="l";break;}}if(vu.length==0){var e=document.createElement("script");e.src="https://api-sao.baidu.com/ft/fp.js";e.async="";document.body.appendChild(e);}</script></body>
 </html>	
